syntax = "proto3";

package comm;

service DoComm {
  rpc DoCapture (StreamRequest) returns (StreamReply);
  rpc DoServe (StreamRequest) returns (StreamReply);
}

message StreamRequest {
  string images_dir = 1;
}

message StreamReply {
  uint64 bytes_written = 1;
  uint64 transfer_duration_millis = 2;
  bool lz4_status = 3;
}
